fixed layout issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,20 +6,24 @@
 
 $containerBorder: 1px solid grey;
 $containerPadding: 8px;
+$headerFontFamily:'Roboto Slab', serif;
 
 
 header{
-  font-size:30px;
-  width:285px;
+  font-size:40px;
+  width:385px;
   float:left;
   margin-top:30px;
+  margin-left:80px;
+  font-family:$headerFontFamily;
+
 }
 
 .animate{
   width:10px;
-  font-size:40px;
+  font-size:50px;
   display:inline-block;
-  margin-top:26px;
+  margin-top:29px;
 
 
     -webkit-animation-name: blinker;
@@ -65,7 +69,7 @@ header{
 .title-container{
   @include span-columns(5);
   float:left;
-  margin-top:70px;
+  margin-top:50px;
   font-size:20px;
   padding:5px;
   border:$containerBorder
@@ -74,7 +78,7 @@ header{
 .author-container{
   @include span-columns(2);
   float:right;
-  margin-top:100px;
+  margin-top:50px;
   font-size:15px;
   padding:$containerPadding;
   padding-top:5px;
